google maps api for location page now working in ie8.

--- a/Web.config
+++ b/Web.config
@@ -20,6 +20,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add tagPrefix="artem" namespace="Artem.Google.UI" assembly="Artem.Google"/>
       </controls>
     </pages>
     <authentication mode="Forms">
